<resources>
    <string name="app_name">T.O.D.O</string>
    <string name="action_settings">Settings</string>

    <string name="hint_title_note">Note title</string>
    <string name="hint_title_description">On your mind?</string>
    <string name="pick_color">Pick  color</string>
    <string name="mark_is_important">Mark is important?</string>
    <string name="reminder">Reminder</string>

    <string name="title_key">title</string>
    <string name="des_key">description</string>
    <string name="id_key">id</string>

    <string name="white_color">99ffff</string>;
    <string name="orange_color">99FBAF3F</string>
    <string name="pink_color">99ED1C24</string>
    <string name="blue_color">991B75BB</string>
</resources>
