<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="#F4F8F9"
    android:paddingBottom="@dimen/padding_top_bottom_dialog_new"
    android:paddingRight="12dp"
    android:paddingTop="@dimen/padding_top_bottom_dialog_new"
    android:paddingLeft="12dp"
    android:id="@+id/lnMainDialog">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_row"
                android:layout_marginTop="@dimen/margin_between_row"
                android:hint="@string/hint_title_note"
                android:textColorHint="#DEE1E2"
                android:textColor="@color/blue_color"
                android:textSize="@dimen/title_font_size"
                android:background="@null"/>

            <EditText
                android:id="@+id/edtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_row"
                android:layout_marginTop="@dimen/margin_between_row"
                android:hint="@string/hint_title_description"
                android:textColorHint="#DEE1E2"
                android:textColor="@color/blue_color"
                android:textSize="@dimen/description_font_size"
                android:background="@null"
                android:lines="4"
                android:gravity="top|left"
                android:maxLines="4"
                android:scrollbars="none"
                android:inputType="textMultiLine"/>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_row"
                android:layout_marginTop="@dimen/margin_between_row"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_color"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/label_font_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">



                    <RelativeLayout
                        android:id="@+id/picker_image_white"
                        android:layout_width="@dimen/custom_circle_image_size"
                        android:layout_height="@dimen/custom_circle_image_size"
                        android:layout_margin="@dimen/margin_between_color_images"
                        android:background="@drawable/circle_image_white">
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/picker_image_orange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_between_color_images"
                        android:background="@drawable/circle_image_orange"></RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/picker_image_pink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_between_color_images"
                        android:background="@drawable/circle_image_pink"></RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/picker_image_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_between_color_images"
                        android:background="@drawable/circle_image_blue"></RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_row"
                android:layout_marginTop="@dimen/margin_between_row"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mark_is_important"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/label_font_size" />

                <Switch
                    android:id="@+id/markIsImportant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="66dp"
                    android:layout_marginRight="66dp"
                    android:textOff="Off"
                    android:textOn="On" />
            </RelativeLayout>

            <!--
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_row"
                android:layout_marginTop="@dimen/margin_between_row"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lableReminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reminder"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/label_font_size" />

                <Switch
                    android:id="@+id/markIsReminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lableReminder">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sep, 20 2016" />
                </LinearLayout>
            </RelativeLayout>
            -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_row"
                android:layout_marginTop="@dimen/margin_between_row"
                android:orientation="horizontal">

                <TextView
                    android:visibility="gone"
                    android:id="@+id/lableReminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reminder"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/label_font_size" />
                <LinearLayout
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lableReminder">


                <TextView
                    android:id="@+id/tvReminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button_reminder"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="9:00AM Sep,20 2016"
                    android:textColor="@color/white_color" />

                <TextView
                    android:id="@+id/tvSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Off?"
                    android:textColor="@color/red_color"/>

                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/btnSave"
                    android:layout_width="@dimen/save_button_size"
                    android:layout_height="@dimen/save_button_size"
                    android:src="@drawable/tick_save"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">
                <ImageView
                    android:id="@+id/btnCancel"
                    android:layout_width="@dimen/save_button_size"
                    android:layout_height="@dimen/save_button_size"
                    android:src="@drawable/cancel"  />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>